<resources>
    <string name="app_name">Buck-it</string>
    <string name="strAdsAppId">ca-app-pub-3940256099942544~3347511713</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="nativeid">ca-app-pub-3940256099942544/2247696110</string>
    <string name="ad_attribution">Ad</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="add_category">Add category</string>
    <string name="add_goal">Add Buck-It List Goal</string>
    <string name="adding_voice_to_affirmation_disable_because_background_voice_is_enable_in_setting">Affirmation voice recording is disabled because background voice is enabled in setting.</string>
    <string name="affirmation">Affirmation</string>
    <string name="all_goals">All goals\n%1$d</string>
    <string name="auto_play_interval">Auto Play Interval</string>
    <string name="automatically_change_the_affirmation_at_given_time_when_play_button_i_clicked">Automatically change the affirmation at specified time when play button clicked</string>
    <string name="background">Background</string>
    <string name="background_music">Background Music</string>
    <string name="background_voice">Background voice</string>
    <string name="backupRestore">Backup &amp; Restore</string>
    <string name="cancel">Cancel</string>
    <string name="checList">Check list</string>
    <string name="check_all">Check All</string>
    <string name="checkmark_uniocde">✓</string>
    <string name="completed">Completed\n%1$d</string>
    <string name="completed_full">Completed</string>
    <string name="confidence">Confidence</string>
    <string name="crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>
    <string name="crop_image_activity_title" />
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="daily_affirmation_reminder">Daily affirmation reminder</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="dashBoard">Dashboard</string>
    <string name="delete">Delete</string>
    <string name="delete_checked_item">Delete</string>
    <string name="delete_checked_item_message">Delete checked items?</string>
    <string name="delete_folder">Delete Folder</string>
    <string name="delete_header">Delete</string>
    <string name="delete_msg">Are you sure want to delete</string>
    <string name="delete_summery">Are you sure you want to delete?</string>
    <string name="demo">demo</string>
    <string name="description">Description</string>
    <string name="dialog_negative_text">Cancel</string>
    <string name="dialog_positive_text">OK</string>
    <string name="download">Download</string>
    <string name="drawerTitleAffirmation">Daily Affirmation</string>
    <string name="drawerTitleFolders">Folders</string>
    <string name="drawerTitleHome">Affirmation</string>
    <string name="drawerTitleManageFolders">Manage Folders</string>
    <string name="drawerTitleLogout">Logout</string>
    <string name="drawerTitleRatting">Rate Us</string>
    <string name="drawerAccountInfo">Account Info</string>
    <string name="drawerTitleSetting">Settings</string>
    <string name="drawerTitleShare">Share App with Friends</string>
    <string name="drive_backups">Drive backups</string>
    <string name="edit_folder">Edit Folder</string>
    <string name="edit_note">Note</string>
    <string name="edit_view_activity_addNewItem">Add Item</string>
    <string name="edit_view_activity_checklist">CheckList</string>
    <string name="edit_view_activity_share">Share</string>
    <string name="enable_auto_playing">Enable Auto Playing</string>
    <string name="enable_background_music">Enable Background Music</string>
    <string name="enable_background_voice">Enable background voice</string>
    <string name="endTime">End time</string>
    <string name="enter_affirmation">Please enter affirmation</string>
    <string name="enter_folder">Please enter folder name</string>
    <string name="enter_interval_time">Enter Interval time</string>
    <string name="enter_sleep_timer">Enter Sleep timer</string>
    <string name="error_profile">Add a picture related to your goal.</string>
    <string name="exit_msg">Are you sure want to exit without saving changes ?</string>
    <string name="export_successfully">Export Successfully</string>
    <string name="failed_to_export">Failed to export</string>
    <string name="failed_to_import">Failed to import</string>
    <string name="folder">Folder</string>
    <string name="folder_color">Folder color</string>
    <string name="folder_icon">Folder icon</string>
    <string name="folder_name">Folder name</string>
    <string name="goalHint">Title</string>
    <string name="home_default_msg">Start your list.</string>
    <string name="i_trust_my_self">I trust my self</string>
    <string name="import_successfully">Import Successfully</string>
    <string name="interval_time">Interval Time</string>
    <string name="interval_time_in_second_for_each_affirmation">Interval time in seconds between affirmation</string>
    <string name="journal">To-do List</string>
    <string name="keep_checked_item">Keep</string>
    <string name="lifePurpose">My Purpose</string>
    <string name="local_backups">Local Backups</string>
    <string name="loop_after_playing_ends">Replay after playing ends</string>
    <string name="loop_playing">Replay</string>
    <string name="merge">Merge</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="navigation_drawer_close">Drawer Close</string>
    <string name="navigation_drawer_open">Drawer open</string>
    <string name="noData">No data found</string>
    <string name="noDataDescActive">Please add or activate your affirmation</string>
    <string name="noDataDescBackup">Please backup your data to restore</string>
    <string name="noDataDescFolder">Please add your folder</string>
    <string name="noDataDescFolderList">Please add your affirmation in this folder</string>
    <string name="noDataTitleActive">No active affirmation</string>
    <string name="noDataTitleBackup">No backup found</string>
    <string name="noDataTitleFolder">No folder found</string>
    <string name="noDataTitleFolderList">No affirmation found</string>
    <string name="noFolderToAdd">No folder found , please add folder add affirmation</string>
    <string name="non_personalized">No, see ads that are less relevant</string>
    <string name="note_">Note :</string>
    <string name="notification">Notification</string>
    <string name="pending">Pending\n%1$d</string>
    <string name="pending_full">Pending</string>
    <string name="personalized">Yes, continue to see relevant ads</string>
    <string name="pick_image_intent_chooser_title">Select source</string>
    <string name="plainText">Plain text</string>
    <string name="play_all_in_folder">Play All In Folder</string>
    <string name="play_background_music_in_fullscreen">Play background music while playing</string>
    <string name="play_background_voice_when_in_fullscreen">Play background voice while playing</string>
    <string name="play_in_random_order">Random Order Playing</string>
    <string name="play_only_active_or_all_affirmations_when_inside_folder">Play only active or all affirmations that are inside folder</string>
    <string name="play_voice_file">Play Voice File</string>
    <string name="play_voice_file_when_the_affirmations_shows_need_to_record_to_hear_voice">Play recorded voice file when the affirmations shows</string>
    <string name="player">Player</string>
    <string name="player_list_is_empty">Player list is empty</string>
    <string name="quote_of_the_day">Affirmation of the day</string>
    <string name="account_info">Account Information</string>
    <string name="rate">Rate us</string>
    <string name="rating_dialog_cancel">Cancel</string>
    <string name="rating_dialog_experience">How was your experience with us?</string>
    <string name="rating_dialog_feedback_title">Feedback</string>
    <string name="rating_dialog_maybe_later">Maybe later</string>
    <string name="rating_dialog_never">Never</string>
    <string name="rating_dialog_submit">Submit</string>
    <string name="rating_dialog_suggestions">Suggest us what went wrong and we\'ll work on it!</string>
    <string name="rationale_ask">This app may not work correctly without the requested permissions.</string>
    <string name="rationale_ask_again">This app may not work correctly without the requested permissions. Open the app settings screen to modify app permissions.</string>
    <string name="rationale_audio">We need access to your audio files for playing background audio.</string>
    <string name="rationale_export">We need access to your storage for export your data.</string>
    <string name="rationale_image">We need access to your photos for setting background image.</string>
    <string name="rationale_save">We need access to your storage for saving your affirmation.</string>
    <string name="record_your_voice">Record your voice</string>
    <string name="record_your_voice_to_hear_during_playing">Record your voice to hear during playing</string>
    <string name="record_your_voice_to_hear_during_playing_instead_of_affirmation_voice">Record your voice to hear while playing instead of affirmation voice</string>
    <string name="restore_data_from_drive_backups">Restore data from drive backups</string>
    <string name="restore_data_from_local_backups">Restore data your local backups</string>
    <string name="restore_msg">Current data will be deleted!\nAre you sure u want to backup?</string>
    <string name="save">Save</string>
    <string name="saveGoal">Save goal</string>
    <string name="screen_controls">Screen Controls</string>
    <string name="select_ImageType_type">Select Image Type</string>
    <string name="select_background_music">Select Background Music</string>
    <string name="select_background_music_for_playing_when_in_fullscreen">Select Background music for playing</string>
    <string name="select_folder_color">Select folder color</string>
    <string name="select_folder_icon">Select folder icon</string>
    <string name="select_folder_type">Select folder type</string>
    <string name="select_from_application">Select from application</string>
    <string name="select_from_gallery">Select from gallery</string>
    <string name="select_from_phone">Select from phone</string>
    <string name="select_image_type">Select Background Image</string>
    <string name="select_the_background_image">Select the background image</string>
    <string name="set">Set</string>
    <string name="set_your_daily_affirmation_time">Set your daily affirmation time</string>
    <string name="share">Share</string>
    <string name="share_using">Share using</string>
    <string name="show_affirmation_in_random_order_while_play">Shows affirmations in random order while playing</string>
    <string name="show_download_button">Show Download Button</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="sort_by_created">By created date</string>
    <string name="sort_by_modified">By modified date</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="speech_prompt">Say something…</string>
    <string name="take_backup">Take Backup</string>
    <string name="take_backup_of_data">Take backup of data</string>
    <string name="time_of_reminder">Time of Reminder</string>
    <string name="ok">Ok</string>
</resources>