<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <item android:icon="@drawable/ic_share" android:id="@+id/shareNote" android:checked="false" android:visible="true" android:title="@string/edit_view_activity_share" app:showAsAction="always"/>
    <item android:icon="@drawable/ic_delete" android:id="@+id/deleteEntry" android:title="@string/delete" app:showAsAction="always"/>
    <item android:icon="@drawable/ic_done" android:id="@+id/save" android:title="@string/save" app:showAsAction="always"/>
    <item android:id="@+id/checklist" android:visible="false" android:title="@string/edit_view_activity_checklist" app:showAsAction="never"/>
</menu>
