<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:elevation="2dp"
    app:cardCornerRadius="8dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/app_name"
                android:textColor="@color/addMobTextColor"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtDesc1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp" />

            <TextView
                android:id="@+id/txtDesc2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColor="@color/addMobTextColor"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtDesc3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp" />

            <TextView
                android:id="@+id/txtprivacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColor="@color/addMobTextColor" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/radioPersonalized">

                <RadioButton
                    android:id="@+id/radioPersonalized"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:background="@drawable/rounded_line_admob"
                    android:padding="12dp"
                    android:text="@string/personalized"
                    android:textColor="@color/addMobTextColor"
                    />

                <RadioButton
                    android:id="@+id/radioNonPersonalized"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:background="@drawable/rounded_line_admob"
                    android:checked="false"
                    android:padding="12dp"
                    android:text="@string/non_personalized"
                    android:textColor="@color/addMobTextColor"
                    />
            </RadioGroup>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp">

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:background="@drawable/btn_selector_rounded_actionbar_admob"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/cancel"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btnOk"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/btn_selector_rounded_actionbar_admob"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/ok"
                    android:textColor="@color/white" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</androidx.cardview.widget.CardView>
