<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:bind="http://schemas.android.com/apk/res/android">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/actionbar"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txtDec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:ellipsize="end"
                android:fontFamily="@font/regular"
                android:gravity="center"
                android:lineSpacingExtra="4dp"
                android:maxLines="6"
                android:padding="4dp"
                android:textColor="@color/textColorRegular"
                android:textSize="14dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/textColorRegular"
                android:visibility="invisible" />

            <LinearLayout
                android:id="@+id/linButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/btnCancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_rectangle_actionbar"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/cancel"
                    android:textAllCaps="true"
                    android:textColor="@color/white" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/textColorRegular"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/btnDelete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_rectangle_actionbar"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/delete"
                    android:textAllCaps="true"
                    android:textColor="@color/white" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/textColorRegular"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/btnMerge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_rectangle_actionbar"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/merge"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
</layout>